--- a/Gamoitsani/Resources/Localization/en.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/en.lproj/Localizable.strings
@@ -6,9 +6,14 @@
   Copyright © 2024 Daviti Khvedelidze. All rights reserved.
 */
 // MARK: General
-"title" = "Gamoitsani";
+"app.title" = "Gamoitsani";
 
 // MARK: Home
 "screen.home.play_button.title" = "Start Game";
 "screen.home.rules_button.title" = "Rules";
 "screen.home.settings_button.title" = "Settings";
+
+// MARK: - Rules
+"screen.rules.title" = "Rules";
+"screen.rules.rules" = "・When explaining the word, it is forbidden to use a single word \n\n ・If a team member guesses the word, press the ✅ button (+1 point) \n\n ・If you can't explain the word, or some rule was broken and you want to go to the next word, press the ❌ button (-1 point) \n\n ・The team that collects more points before the time runs out, or the first to reach the set number of points in the round, wins. \n\n Good luck :)";
+
