--- a/Gamoitsani/Resources/Localization/ka.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/ka.lproj/Localizable.strings
@@ -5,10 +5,15 @@
   Created by Daviti Khvedelidze on 23/04/2024.
   Copyright © 2024 Daviti Khvedelidze. All rights reserved.
 */
-// MARK: General
-"title" = "გამოიცანი";
+// MARK: - General
+"app.title" = "გამოიცანი";
 
-// MARK: Home
+// MARK: - Home
 "screen.home.play_button.title" = "თამაშის დაწყება";
 "screen.home.rules_button.title" = "წესები";
 "screen.home.settings_button.title" = "პარამეტრები";
+
+// MARK: - Rules
+"screen.rules.title" = "წესები";
+"screen.rules.rules" = "・სიტყვის ახსნისას აკრძალულია ერთფუძიანი სიტყვის გამოყენება \n ・თუ გუნდის წევრი გამოიცნობს სიტყვას, დააჭირეთ ✅ ღილაკს (+1 ქულა) \n ・თუ სიტყვის ახსნა ვერ მოახერხეთ, ან რომელიმე წესი დაირღვა და გინდათ რომ შემდეგ სიტყვაზე გადახვიდეთ დააჭირეთ ❌ ღილაკს (-1 ქულა) \n ・გაიმარჯვებს ის გუნდი, რომელიც დროის ამოწურვამდე დააგროვებს უფრო მეტ ქულას, ან პირველი მიაღწევს რაუნდში დაწესებულ ქულების რაოდენობას. \n გისურვებთ წარმატებებს :)";
+
