--- a/Gamoitsani/Resources/Localization/en.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/en.lproj/Localizable.strings
@@ -8,6 +8,11 @@
 // MARK: - General
 "app.title" = "Gamoitsani";
 "and" = "and";
+"yesPolite" = "Yes";
+"no" = "No";
+"Ok" = "Ok";
+"add" = "Add";
+"cancel" = "Cancel";
 
 // MARK: - Home
 "screen.home.play_button.title" = "Start Game";
@@ -24,3 +29,13 @@
 "screen.game_settings.rounds_amount.title" = "Rounds Amount: %@";
 "screen.game_settings.rounds_length.title" = "Round Length: %@ sec";
 "screen.game_settings.teams.title" = "Teams";
+"screen.game_settings.add_team_alert.title" = "Add team!";
+"screen.game_settings.add_team_alert.message" = "Enter team name";
+"screen.game_settings.start_game.title" = "Start Game";
+"screen.game_settings.incorrect_parameter.title" = "Incorrect parameter";
+"screen.game_settings.incorrect_game_settings_not_enough_teams.message" = "Not enough teams, you need to add at least 2 teams to start the game!";
+"screen.game_settings.incorrect_game_settings_not_unique_teams.message" = "Team names must be unique!";
+
+// MARK: - Game
+"screen.game.confirmation_alert.title" = "Are you sure you want to go back??";
+"screen.game.confirmation_alert.message" = "In this case, the game session will be lost.";
