--- a/Gamoitsani/Resources/Localization/en.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/en.lproj/Localizable.strings
@@ -10,9 +10,13 @@
 "and" = "and";
 "yesPolite" = "Yes";
 "no" = "No";
-"Ok" = "Ok";
+"ok" = "OK";
 "add" = "Add";
+"add_it" = "Add";
+"change" = "Change";
 "cancel" = "Cancel";
+"edit" = "Edit";
+"delete" = "Delete";
 
 // MARK: - Home
 "screen.home.play_button.title" = "Start Game";
@@ -29,13 +33,14 @@
 "screen.game_settings.rounds_amount.title" = "Rounds Amount: %@";
 "screen.game_settings.rounds_length.title" = "Round Length: %@ sec";
 "screen.game_settings.teams.title" = "Teams";
-"screen.game_settings.add_team_alert.title" = "Add team!";
+"screen.game_settings.add_team_alert.title" = "Add team";
 "screen.game_settings.add_team_alert.message" = "Enter team name";
+"screen.game_settings.update_team_name_alert.title" = "Update team name";
 "screen.game_settings.start_game.title" = "Start Game";
 "screen.game_settings.incorrect_parameter.title" = "Incorrect parameter";
 "screen.game_settings.incorrect_game_settings_not_enough_teams.message" = "Not enough teams, you need to add at least 2 teams to start the game!";
 "screen.game_settings.incorrect_game_settings_not_unique_teams.message" = "Team names must be unique!";
 
 // MARK: - Game
-"screen.game.confirmation_alert.title" = "Are you sure you want to go back??";
-"screen.game.confirmation_alert.message" = "In this case, the game session will be lost.";
+"screen.game.confirmation_alert.title" = "Are you sure you want to go back?";
+"screen.game.confirmation_alert.message" = "In this case, the teams' points will be lost";
