--- a/Gamoitsani/Resources/Localization/en.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/en.lproj/Localizable.strings
@@ -17,6 +17,9 @@
 "cancel" = "Cancel";
 "edit" = "Edit";
 "delete" = "Delete";
+"scoreboard" = "Scoreboard";
+"point" = "Point";
+"start" = "Start";
 
 // MARK: - Home
 "screen.home.play_button.title" = "Start Game";
@@ -44,3 +47,4 @@
 // MARK: - Game
 "screen.game.confirmation_alert.title" = "Are you sure you want to go back?";
 "screen.game.confirmation_alert.message" = "In this case, the teams' points will be lost";
+"screen.game.current_round.message" = "Round: %@";
