--- a/Gamoitsani/Resources/Localization/ka.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/ka.lproj/Localizable.strings
@@ -17,6 +17,9 @@
 "cancel" = "გაუქმება";
 "edit" = "დაარედაქტირე";
 "delete" = "წაშალე";
+"scoreboard" = "ანგარიში";
+"point" = "ქულა";
+"start" = "დაწყება";
 
 // MARK: - Home
 "screen.home.play_button.title" = "თამაშის დაწყება";
@@ -44,3 +47,4 @@
 // MARK: - Game
 "screen.game.confirmation_alert.title" = "დარწმუნებული ხარ რომ უკან დაბრუნება გინდა?";
 "screen.game.confirmation_alert.message" = "ამ შემთხვევაში გუნდების ქულები დაიკარგება.";
+"screen.game.current_round.message" = "რაუნდი: %@";
