--- a/Gamoitsani/Resources/Localization/ka.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/ka.lproj/Localizable.strings
@@ -25,12 +25,18 @@
 // MARK: - Home
 "screen.home.play_button.title" = "თამაშის დაწყება";
 "screen.home.rules_button.title" = "წესები";
+"screen.home.add_word_button.title" = "სიტყვის დამატება";
 "screen.home.settings_button.title" = "პარამეტრები";
 "screen.home.change_language.title" = "ენის შეცვლა";
 
 // MARK: - Rules
 "screen.rules.title" = "წესები";
-"screen.rules.rules" = "・სიტყვის ახსნისას აკრძალულია ერთფუძიანი სიტყვის გამოყენება \n ・თუ გუნდის წევრი გამოიცნობს სიტყვას, დააჭირეთ ✅ ღილაკს (+1 ქულა) \n ・თუ სიტყვის ახსნა ვერ მოახერხეთ, ან რომელიმე წესი დაირღვა და გინდათ რომ შემდეგ სიტყვაზე გადახვიდეთ დააჭირეთ ❌ ღილაკს (-1 ქულა) \n ・გაიმარჯვებს ის გუნდი, რომელიც დროის ამოწურვამდე დააგროვებს უფრო მეტ ქულას, ან პირველი მიაღწევს რაუნდში დაწესებულ ქულების რაოდენობას. \n გისურვებთ წარმატებებს :)";
+"screen.rules.rules" = "・სიტყვის ახსნისას აკრძალულია ერთფუძიანი სიტყვის გამოყენება \n ・თუ გუნდის წევრი გამოიცნობს სიტყვას, დააჭირეთ მწვანე ღილაკს (+1 ქულა) \n ・თუ სიტყვის ახსნა ვერ მოახერხეთ, ან რომელიმე წესი დაირღვა და გინდათ რომ შემდეგ სიტყვაზე გადახვიდეთ დააჭირეთ წითელ ღილაკს (-1 ქულა) \n ・გაიმარჯვებს ის გუნდი, რომელიც დროის ამოწურვამდე დააგროვებს უფრო მეტ ქულას, ან პირველი მიაღწევს რაუნდში დაწესებულ ქულების რაოდენობას. \n გისურვებთ წარმატებებს :)";
+
+// MARK: - Add Word
+"screen.add_word.title" = "სიტყვის დამატება";
+"screen.add_word.send" = "გააგზავნე";
+"screen.add_word.hint" = "გაითვალისწინე, რომ დაამატო ერთფუძიანი ქართული სიტყვა :)";
 
 // MARK: - Game Settings
 "screen.game_settings.title" = "თამაშის პარამეტრები";
