--- a/Gamoitsani/Resources/Localization/ka.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/ka.lproj/Localizable.strings
@@ -23,7 +23,7 @@
 "thanks" = "მადლობა";
 
 // MARK: - Home
-"screen.home.play_button.title" = "თამაშის დაწყება";
+"screen.home.play_button.title" = "თამაში";
 "screen.home.rules_button.title" = "წესები";
 "screen.home.add_word_button.title" = "სიტყვის დამატება";
 "screen.home.settings_button.title" = "პარამეტრები";
@@ -31,7 +31,12 @@
 
 // MARK: - Rules
 "screen.rules.title" = "წესები";
-"screen.rules.rules" = "・სიტყვის ახსნისას აკრძალულია ერთფუძიანი სიტყვის გამოყენება \n ・თუ გუნდის წევრი გამოიცნობს სიტყვას, დააჭირეთ მწვანე ღილაკს (+1 ქულა) \n ・თუ სიტყვის ახსნა ვერ მოახერხეთ, ან რომელიმე წესი დაირღვა და გინდათ რომ შემდეგ სიტყვაზე გადახვიდეთ დააჭირეთ წითელ ღილაკს (-1 ქულა) \n ・გაიმარჯვებს ის გუნდი, რომელიც დროის ამოწურვამდე დააგროვებს უფრო მეტ ქულას, ან პირველი მიაღწევს რაუნდში დაწესებულ ქულების რაოდენობას. \n გისურვებთ წარმატებებს :)";
+"screen.rules.rule1" = "გაითვალისწინე, რომ ამ ეტაპზე მხოლოდ ქართული სიტყვებით შეგიძლია თამაში";
+"screen.rules.rule2" = "სიტყვის ახსნისას აკრძალულია ერთფუძიანი სიტყვის გამოყენება";
+"screen.rules.rule3" = "თუ გუნდის წევრი გამოიცნობს სიტყვას, დააჭირეთ მწვანე ღილაკს (+1 ქულა)";
+"screen.rules.rule4" = "თუ სიტყვის ახსნა ვერ მოახერხეთ, ან რომელიმე წესი დაირღვა და გინდათ რომ შემდეგ სიტყვაზე გადახვიდეთ დააჭირეთ წითელ ღილაკს (-1 ქულა)";
+"screen.rules.rule5" = "გაიმარჯვებს ის გუნდი, რომელიც დროის ამოწურვამდე დააგროვებს უფრო მეტ ქულას, ან პირველი მიაღწევს რაუნდში დაწესებულ ქულების რაოდენობას";
+"screen.rules.rule6" = "გისურვებთ წარმატებებს :)";
 
 // MARK: - Add Word
 "screen.add_word.title" = "სიტყვის დამატება";
@@ -52,6 +57,8 @@
 "screen.game_settings.incorrect_parameter.title" = "არასწორი პარამეტრი";
 "screen.game_settings.incorrect_game_settings_not_enough_teams.message" = "არასაკმარისი გუნდების რაოდენობა, თამაშის დასაწყებად საჭიროა მინიმუმ 2 გუნდის დამატება!";
 "screen.game_settings.incorrect_game_settings_not_unique_teams.message" = "გუნდების სახელები უნდა იყოს უნიკალური!";
+"screen.game_settings.incorrect_game_settings_maximum_teams.message" = "5 გუნდზე მეტის დამატება შეუძლებელია";
+"screen.game_settings.incorrect_game_settings_empty_team_name.message" = "გუნდის სახელი ვერ იქნება ცარიელი";
 
 // MARK: - Game
 "screen.game.confirmation_alert.title" = "დარწმუნებული ხარ რომ უკან დაბრუნება გინდა?";
