--- a/Gamoitsani/Resources/Localization/en.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/en.lproj/Localizable.strings
@@ -26,12 +26,11 @@
 "screen.home.play_button.title" = "Game";
 "screen.home.rules_button.title" = "Rules";
 "screen.home.add_word_button.title" = "Add word";
-"screen.home.settings_button.title" = "Settings";
 "screen.home.change_language.title" = "Change language";
 
 // MARK: - Rules
 "screen.rules.title" = "Rules";
-"screen.rules.rule1" = "Note that at this moment you can only play with Georgian words";
+"screen.rules.rule1" = "Note that at this moment you can only play with Georgian words⚠️";
 "screen.rules.rule2" = "When explaining the word, it is forbidden to use a single word";
 "screen.rules.rule3" = "If a team member guesses the word, press the green button (+1 point)";
 "screen.rules.rule4" = "If you can't explain the word, or some rule was broken and you want to go to the next word, press the red button (-1 point)";
@@ -43,22 +42,22 @@
 "screen.add_word.send" = "Send";
 "screen.add_word.hint" = "Remember to add valid word :)";
 
-// MARK: - Game Settings
-"screen.game_settings.title" = "Game Settings";
-"screen.game_settings.rounds_amount.title" = "Rounds Amount: %@";
-"screen.game_settings.rounds_length.title" = "Round Length: %@ sec";
-"screen.game_settings.teams.title" = "Teams";
-"screen.game_settings.add_team_alert.title" = "Add team";
-"screen.game_settings.add_team_alert.message" = "Enter team name";
-"screen.game_settings.update_team_name_alert.title" = "Update team name";
-"screen.game_settings.no_internet_connection_alert.title" = "No internet connection!";
-"screen.game_settings.no_internet_connection_alert.message" = "Internet connection is required to start the game";
-"screen.game_settings.start_game.title" = "Start Game";
-"screen.game_settings.incorrect_parameter.title" = "Incorrect parameter";
-"screen.game_settings.incorrect_game_settings_not_enough_teams.message" = "Not enough teams, you need to add at least 2 teams to start the game!";
-"screen.game_settings.incorrect_game_settings_not_unique_teams.message" = "Team names must be unique!";
-"screen.game_settings.incorrect_game_settings_maximum_teams.message" = "It is not possible to add more than 5 teams";
-"screen.game_settings.incorrect_game_settings_empty_team_name.message" = "Team name cannot be empty";
+// MARK: - Game Details
+"screen.game_details.title" = "Game Details";
+"screen.game_details.rounds_amount.title" = "Rounds Amount: %@";
+"screen.game_details.rounds_length.title" = "Round Length: %@ sec";
+"screen.game_details.teams.title" = "Teams";
+"screen.game_details.add_team_alert.title" = "Add team";
+"screen.game_details.add_team_alert.message" = "Enter team name";
+"screen.game_details.update_team_name_alert.title" = "Update team name";
+"screen.game_details.no_internet_connection_alert.title" = "No internet connection!";
+"screen.game_details.no_internet_connection_alert.message" = "Internet connection is required to start the game";
+"screen.game_details.start_game.title" = "Start Game";
+"screen.game_details.incorrect_parameter.title" = "Incorrect parameter";
+"screen.game_details.incorrect_game_details_not_enough_teams.message" = "Not enough teams, you need to add at least 2 teams to start the game!";
+"screen.game_details.incorrect_game_details_not_unique_teams.message" = "Team names must be unique!";
+"screen.game_details.incorrect_game_details_maximum_teams.message" = "It is not possible to add more than 5 teams";
+"screen.game_details.incorrect_game_details_empty_team_name.message" = "Team name cannot be empty";
 
 // MARK: - Game
 "screen.game.confirmation_alert.title" = "Are you sure you want to go back?";
@@ -66,3 +65,4 @@
 "screen.game.current_round.message" = "Round: %@";
 "screen.game.winning_alert.title" = "Congratulations %@";
 "screen.game.winning_alert.message" = "You won with %@ points";
+"screen.game.no_more_words.message" = "No more words";
