--- a/Gamoitsani/Resources/Localization/en.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/en.lproj/Localizable.strings
@@ -21,6 +21,7 @@
 "point" = "Point";
 "start" = "Start";
 "thanks" = "Thanks";
+"back" = "Back";
 
 // MARK: - Home
 "screen.home.play_button.title" = "Game";
