--- a/Gamoitsani/Resources/Localization/ka.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/ka.lproj/Localizable.strings
@@ -21,6 +21,7 @@
 "point" = "ქულა";
 "start" = "დაწყება";
 "thanks" = "მადლობა";
+"back" = "უკან";
 
 // MARK: - Home
 "screen.home.play_button.title" = "თამაში";
