--- a/Gamoitsani/Resources/Localization/ka.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/ka.lproj/Localizable.strings
@@ -63,6 +63,7 @@
 "screen.game.confirmation_alert.title" = "დარწმუნებული ხარ რომ უკან დაბრუნება გინდა?";
 "screen.game.confirmation_alert.message" = "გუნდების ქულები დაიკარგება";
 "screen.game.current_round.message" = "რაუნდი: %@";
+"screen.game.current_extra_round.message" = "(დამატებითი: %@)";
 "screen.game.no_more_words.message" = "სიტყვები ამოიწურა";
 "screen.game.winning_view.title" = "გილოცავთ!";
 "screen.game.winning_view.repeat" = "თავიდან";
