--- a/Gamoitsani/Resources/Localization/en.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/en.lproj/Localizable.strings
@@ -80,3 +80,4 @@
 "screen.game.winning_view.repeat" = "Repeat";
 "screen.game.winning_view.game_details.title" = "Go Back";
 "screen.game.winning_view.description" = "You won with %@ points";
+"screen.game.game_share_view.title" = "The winning team is %@ with %@ points!";
