--- a/Gamoitsani/Resources/Localization/ka.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/ka.lproj/Localizable.strings
@@ -81,4 +81,8 @@
 "screen.game.winning_view.repeat" = "თავიდან";
 "screen.game.winning_view.game_details.title" = "დაბრუნება";
 "screen.game.winning_view.description" = "თქვენ მოიგეთ %@ ქულით";
-"screen.game.game_share_view.title" = "გამარჯვებული გუნდია %@ %@ ქულით!";
+"screen.game.game_share_view.title" = "გამარჯვებული გუნდია %@ 🥳";
+
+// MARK: - Game Share
+"screen.game_share.title" = "გააზიარე თამაში";
+"screen.game_share.share_to" = "გააზიარე";
