--- a/Gamoitsani/Resources/Localization/ka.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/ka.lproj/Localizable.strings
@@ -84,5 +84,5 @@
 "screen.game.game_share_view.title" = "გამარჯვებული გუნდია %@ 🥳";
 
 // MARK: - Game Share
-"screen.game_share.title" = "გააზიარე თამაში";
+"screen.game_share.title" = "გააზიარე შედეგები!";
 "screen.game_share.share_to" = "გააზიარე";
