added support of ukrainian language🇺🇦

--- a/Gamoitsani/Resources/Localization/uk.lproj/Localizable.strings
+++ b/Gamoitsani/Resources/Localization/uk.lproj/Localizable.strings
@@ -6,7 +6,7 @@
   Copyright © 2024 Daviti Khvedelidze. All rights reserved.
 */
 // MARK: - General
-"app.title" = "Відгадай";
+"app.title" = "Gamoitsani";
 "and" = "та";
 "yesPolite" = "Так";
 "no" = "Ні";
